--- a/Mitchell-Hatchett/OlympicsWebPageHW.html
+++ b/Mitchell-Hatchett/OlympicsWebPageHW.html
@@ -236,7 +236,7 @@
       style="width: 100%;">
   </div>
 
-    <h3>Athletes by Height Height </h3>
+    <h3>Athletes by Height </h3>
     
     <div class="slideshow-container">
 
